Small fixes for MMR - spacing issues and texts - Small tweaks, removed portlet buttons

--- a/public/stylesheets/gnew.css
+++ b/public/stylesheets/gnew.css
@@ -2,11 +2,17 @@
 	display:none;
 }
 
+.ui-icon
+{
+display:none !Important;	
+}
+
 #disclaimer
 {
 padding-top: 30px;	
 padding-left: 10px;
 padding-right: 10px;
+padding-bottom: 5px;
 }
 
 #menu_home 
